Update output documentation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
     <title></title>
     <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
+    <meta name="description" content="lilpilot's simiki"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
 
@@ -29,14 +29,26 @@
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
+      <h2 id="Linux">Linux
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./Linux/常用命令笔记.html">常用命令笔记</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
     <div class="clearfix"></div>
 </div>
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2017 .
+        <p>Copyright © 2017 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-12-16 19:55:56</p>
+        <p>Site Generated 2017-12-16 22:45:44</p>
       </span>
     </div>
 
