--- a/intro/gettingstarted.html
+++ b/intro/gettingstarted.html
@@ -8,7 +8,7 @@
     <link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
     <title>Getting Started - </title>
     <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
+    <meta name="description" content="lilpilot's simiki"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
 
@@ -116,9 +116,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2017 .
+        <p>Copyright © 2017 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-12-16 19:55:56</p>
+        <p>Site Generated 2017-12-16 22:45:41</p>
       </span>
     </div>
 
