Update output documentation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 
 <div class="index">    
     <div class="category">
+      <h2 id="Git">Git
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./Git/常用命令笔记.html">常用命令笔记</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="intro">Intro
       </h2>
       <div class="category_pages">
@@ -48,7 +60,7 @@
       <span>
         <p>Copyright © 2017 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-12-16 22:45:44</p>
+        <p>Site Generated 2017-12-17 10:58:59</p>
       </span>
     </div>
 
