--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
+      <h2 id="React">React
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./React/组件结构.html">组件结构</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
     <div class="clearfix"></div>
 </div>
     </div>
@@ -60,7 +72,7 @@
       <span>
         <p>Copyright © 2017 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-12-20 09:45:14</p>
+        <p>Site Generated 2017-12-31 20:41:21</p>
       </span>
     </div>
 
