--- a/intro/gettingstarted.html
+++ b/intro/gettingstarted.html
@@ -34,6 +34,7 @@
 <li><a href="#create-a-new-wiki">Create a new wiki</a></li>
 <li><a href="#generate">Generate</a></li>
 <li><a href="#preview">Preview</a></li>
+<li><a href="#deploy-to-remote">Deploy to remote</a></li>
 </ul>
 </li>
 <li><a href="#others">Others</a></li>
@@ -88,6 +89,11 @@
 </pre></div>
 
 
+<h3 id="deploy-to-remote">Deploy to remote</h3>
+<div class="hlcode"><pre><span class="n">fab</span> <span class="n">deploy</span>
+</pre></div>
+
+
 <p>For more information, <code>simiki -h</code> or have a look at <a href="http://simiki.org">Simiki.org</a></p>
 <h2 id="others">Others</h2>
 <ul>
@@ -118,7 +124,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
       <span>
         <p>Copyright © 2017 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-12-20 09:45:14</p>
+        <p>Site Generated 2017-12-31 20:41:15</p>
       </span>
     </div>
 
