Update output documentation

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
     </div> <!-- end category -->
     <div class="clearfix"></div>  
     <div class="category">
+      <h2 id="JavaScript">Javascript
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./JavaScript/basis.html">basis</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="Linux">Linux
       </h2>
       <div class="category_pages">
@@ -70,9 +82,9 @@
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2017 lilpilot.
+        <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2017-12-31 20:41:21</p>
+        <p>Site Generated 2018-01-02 17:32:31</p>
       </span>
     </div>
 
