Update output documentation

--- a/Linux/常用命令笔记.html
+++ b/Linux/常用命令笔记.html
@@ -162,12 +162,13 @@ ps aux 列出所有在内存中的程序</p>
 <hr />
 <h1 id="_20">命令行光标移动</h1>
 <p><img alt="" src="https://wx2.sinaimg.cn/mw690/cfce7b59ly1fnvicbi7haj20nu080t9e.jpg" /></p>
+<p>注: mac 单词移动 option/alt + 方向键</p>
     </div>
     <div id="footer">
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-02-06 15:56:07</p>
+        <p>Site Generated 2018-02-06 16:09:58</p>
       </span>
     </div>
 
