--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 
 <div class="index">    
     <div class="category">
+      <h2 id="DesignPattern">Designpattern
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Template Pattern.html">Template Pattern</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="Git">Git
       </h2>
       <div class="category_pages">
@@ -84,7 +96,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-02-06 16:09:58</p>
+        <p>Site Generated 2018-03-08 22:47:30</p>
       </span>
     </div>
 
