Update output documentation

--- a/DesignPattern/Template Pattern.html
+++ b/DesignPattern/Template Pattern.html
@@ -30,7 +30,7 @@
 <p>喝牛奶和吃饼干，可能没什么区别吧，对于饿的人来说。</p>
 <p>如果有一些共同的流程步骤，试试模板模式吧。</p>
 <p>模板负责控制流程，模板的实现类只需要关注每个步骤的细节。</p>
-<h1 id="_2">举例</h1>
+<h1 id="bb">别bb 看代码</h1>
 <p>吃东西的流程：</p>
 <div class="hlcode"><pre><span class="n">public</span> <span class="n">abstract</span> <span class="n">class</span> <span class="n">EatFood</span> <span class="p">{</span>
     <span class="c1">//拿吃的</span>
@@ -116,7 +116,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-03-08 22:47:30</p>
+        <p>Site Generated 2018-03-13 23:29:21</p>
       </span>
     </div>
 
