--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
       <div class="category_pages">
         <ul>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Builder Pattern.html">Builder Patternn</a>
+          </li>  
+          <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Chain of Responsibility Pattern.html">Chain of Responsibility Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Template Pattern.html">Template Pattern</a>
           </li>
         </ul>
@@ -96,7 +102,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-03-08 22:47:30</p>
+        <p>Site Generated 2018-03-13 23:29:21</p>
       </span>
     </div>
 
