--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               <a href="./DesignPattern/Chain of Responsibility Pattern.html">Chain of Responsibility Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Command Pattern.html">Command Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Template Pattern.html">Template Pattern</a>
           </li>
         </ul>
@@ -102,7 +105,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-03-13 23:29:21</p>
+        <p>Site Generated 2018-04-17 23:52:48</p>
       </span>
     </div>
 
