Update output documentation

--- a/Linux/常用命令笔记.html
+++ b/Linux/常用命令笔记.html
@@ -76,7 +76,15 @@
 <li><a href="#_19">参数</a></li>
 </ul>
 </li>
-<li><a href="#_20">命令行光标移动</a></li>
+<li><a href="#free">free</a><ul>
+<li><a href="#_20">常用</a></li>
+</ul>
+</li>
+<li><a href="#top">top</a><ul>
+<li><a href="#_21">常用</a></li>
+</ul>
+</li>
+<li><a href="#_22">命令行光标移动</a></li>
 </ul>
 </div>
 <h1 id="zip-unzip">zip / unzip</h1>
@@ -158,9 +166,23 @@ ps aux 列出所有在内存中的程序</p>
 -A 同上，除去.及..<br />
 -S 按文件大小排序<br />
 -lh 列出可读的文件大小<br />
--lSh 按可读的文件大小排序</p>
+-lSh 按可读的文件大小排序<br />
+-l 列出详情(等同ll)(常用-lrt | -r -t为排序)</p>
 <hr />
-<h1 id="_20">命令行光标移动</h1>
+<h1 id="free">free</h1>
+<h3 id="_20">常用</h3>
+<p>free -m 以MB为单位显示内存使用情况</p>
+<hr />
+<h1 id="top">top</h1>
+<h3 id="_21">常用</h3>
+<p>l 系统负载 在过去1分钟、5分钟、15分钟内运行进程队列中的平均进程数量<br />
+m 切换显示内存信息<br />
+t 切换显示进程和CPU状态信息<br />
+M 根据驻留内存大小进行排序<br />
+P 根据CPU使用百分比大小进行排序<br />
+T 根据时间/累计时间进行排序</p>
+<hr />
+<h1 id="_22">命令行光标移动</h1>
 <p><img alt="" src="https://wx2.sinaimg.cn/mw690/cfce7b59ly1fnvicbi7haj20nu080t9e.jpg" /></p>
 <p>注: mac 单词移动 option/alt + 方向键</p>
     </div>
@@ -168,7 +190,7 @@ ps aux 列出所有在内存中的程序</p>
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-04-17 23:52:48</p>
+        <p>Site Generated 2018-05-08 20:22:56</p>
       </span>
     </div>
 
