--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
     </div> <!-- end category -->
     <div class="clearfix"></div>  
     <div class="category">
+      <h2 id="MySQL">Mysql
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./MySQL/常用操作.html">常用操作</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="React">React
       </h2>
       <div class="category_pages">
@@ -105,7 +117,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-04-17 23:52:48</p>
+        <p>Site Generated 2018-05-08 20:22:56</p>
       </span>
     </div>
 
