--- a/Linux/常用命令笔记.html
+++ b/Linux/常用命令笔记.html
@@ -167,6 +167,7 @@ ps aux 列出所有在内存中的程序</p>
 -S 按文件大小排序<br />
 -lh 列出可读的文件大小<br />
 -lSh 按可读的文件大小排序<br />
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD<br />
 -l 列出详情(等同ll)(常用-lrt | -r -t为排序)</p>
 <hr />
 <h1 id="free">free</h1>
@@ -190,7 +191,7 @@ T 根据时间/累计时间进行排序</p>
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-05-08 20:22:56</p>
+        <p>Site Generated 2018-05-09 10:55:01</p>
       </span>
     </div>
 
