--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               <a href="./DesignPattern/Command Pattern.html">Command Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Stretagy Pattern.html">Stretagy Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Template Pattern.html">Template Pattern</a>
           </li>
         </ul>
@@ -117,7 +120,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-05-09 10:55:01</p>
+        <p>Site Generated 2018-05-28 23:19:25</p>
       </span>
     </div>
 
