Update output documentation

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               <a href="./DesignPattern/Command Pattern.html">Command Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Simple Factory Pattern.html">Simple Factory Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Strategy Pattern.html">Strategy Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -120,7 +123,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-05-28 23:23:02</p>
+        <p>Site Generated 2018-05-29 22:41:38</p>
       </span>
     </div>
 
