--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="category_pages">
         <ul>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Abstract Factory Pattern.html">Abstract Factory Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Builder Pattern.html">Builder Patternn</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -123,7 +126,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-05-29 22:41:38</p>
+        <p>Site Generated 2018-05-30 23:15:29</p>
       </span>
     </div>
 
