--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <a href="./DesignPattern/Command Pattern.html">Command Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Factory Method Pattern.html">Factory Method Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Simple Factory Pattern.html">Simple Factory Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -126,7 +129,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-05-30 23:15:29</p>
+        <p>Site Generated 2018-05-31 23:52:01</p>
       </span>
     </div>
 
