Update output documentation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <a href="./DesignPattern/Factory Method Pattern.html">Factory Method Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Observer Pattern.html">Observer Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Simple Factory Pattern.html">Simple Factory Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -129,7 +132,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-05-31 23:52:01</p>
+        <p>Site Generated 2018-06-05 23:34:29</p>
       </span>
     </div>
 
