--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <a href="./DesignPattern/Command Pattern.html">Command Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Decorator Pattern.html">Decorator Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Factory Method Pattern.html">Factory Method Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -132,7 +135,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-06-05 23:34:29</p>
+        <p>Site Generated 2018-06-06 23:06:06</p>
       </span>
     </div>
 
