Update output documentation

--- a/DesignPattern/Abstract Factory Pattern.html
+++ b/DesignPattern/Abstract Factory Pattern.html
@@ -27,6 +27,7 @@
 
   <h1 id="_1">抽象工厂模式</h1>
 <p>抽象工厂模式 : 将所需创建对象的家族抽象为接口，需要时，调用具体工厂的callback来生成对应的对象</p>
+<p>当产品只有一种时，抽象工厂变成工厂方法；当产品有多种类型时，工厂方法模式变为抽象工厂。</p>
 <h1 id="_2">看代码</h1>
 <p>对工厂和对象进行抽象：</p>
 <div class="hlcode"><pre><span class="c1">//抽象的工厂接口</span>
@@ -117,7 +118,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-06-06 23:06:06</p>
+        <p>Site Generated 2018-06-12 09:40:08</p>
       </span>
     </div>
 
