--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               <a href="./DesignPattern/Simple Factory Pattern.html">Simple Factory Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Singleton Pattern.html">Singleton Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Strategy Pattern.html">Strategy Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -135,7 +138,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-06-06 23:06:06</p>
+        <p>Site Generated 2018-06-12 09:40:08</p>
       </span>
     </div>
 
