Update output documentation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
               <a href="./DesignPattern/Abstract Factory Pattern.html">Abstract Factory Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Adapter Pattern.html">Adapter Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Builder Pattern.html">Builder Patternn</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -37,6 +40,9 @@
           </li>  
           <li class="pagelist item_arrow">
               <a href="./DesignPattern/Decorator Pattern.html">Decorator Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Facade Pattern.html">Facade Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
               <a href="./DesignPattern/Factory Method Pattern.html">Factory Method Pattern</a>
@@ -138,7 +144,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-06-12 09:40:08</p>
+        <p>Site Generated 2018-06-14 09:19:01</p>
       </span>
     </div>
 
