Update output documentation

--- a/Linux/常用命令笔记.html
+++ b/Linux/常用命令笔记.html
@@ -98,7 +98,8 @@
 <p>-A<num> 结果及结果后num行<br />
 -B<num> 结果及结果前num行<br />
 -C<num> 结果及结果前后num行<br />
--c --count 统计</p>
+-c --count 统计<br />
+-E 使用扩展正则表达式 例如: grep -E "20180628:08|20180628:09" file</p>
 <hr />
 <h1 id="tail">tail</h1>
 <h3 id="_4">格式</h3>
@@ -191,7 +192,7 @@ T 根据时间/累计时间进行排序</p>
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-06-14 09:19:01</p>
+        <p>Site Generated 2018-06-28 16:49:57</p>
       </span>
     </div>
 
