Update output documentation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <a href="./DesignPattern/Command Pattern.html">Command Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Composite Pattern.html">Composite Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Decorator Pattern.html">Decorator Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -46,6 +49,9 @@
           </li>  
           <li class="pagelist item_arrow">
               <a href="./DesignPattern/Factory Method Pattern.html">Factory Method Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Iterator Pattern.html">Iterator Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
               <a href="./DesignPattern/Observer Pattern.html">Observer Pattern</a>
@@ -144,7 +150,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-07-05 22:25:17</p>
+        <p>Site Generated 2018-07-08 23:10:20</p>
       </span>
     </div>
 
