--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
               <a href="./DesignPattern/Singleton Pattern.html">Singleton Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/State Pattern.html">State Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Strategy Pattern.html">Strategy Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -150,7 +153,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-07-08 23:10:20</p>
+        <p>Site Generated 2018-07-15 20:43:54</p>
       </span>
     </div>
 
