Update output documentation

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               <a href="./DesignPattern/Observer Pattern.html">Observer Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
+              <a href="./DesignPattern/Proxy Pattern.html">Proxy Pattern</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./DesignPattern/Simple Factory Pattern.html">Simple Factory Pattern</a>
           </li>  
           <li class="pagelist item_arrow">
@@ -153,7 +156,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-07-15 20:43:54</p>
+        <p>Site Generated 2018-07-24 23:23:35</p>
       </span>
     </div>
 
