Update output documentation

--- a/index.html
+++ b/index.html
@@ -103,6 +103,29 @@
     </div> <!-- end category -->
     <div class="clearfix"></div>  
     <div class="category">
+      <h2 id="Java">Java
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./Java/JUnit.html">JUnit</a>
+          </li>  
+          <li class="pagelist">
+                
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">基础&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./Java/异常.html">异常</a>&nbsp;&#47;&nbsp;
+                  <a href="./Java/泛型.html">泛型</a>&nbsp;&#47;&nbsp;
+                  <a href="./Java/集合框架.html">集合框架</a>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
       <h2 id="JavaScript">Javascript
       </h2>
       <div class="category_pages">
@@ -156,7 +179,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-07-24 23:23:35</p>
+        <p>Site Generated 2018-09-17 22:11:52</p>
       </span>
     </div>
 
