--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@
         </ul>
       </div> <!-- end category_pages -->
     </div> <!-- end category -->
+    <div class="clearfix"></div>  
+    <div class="category">
+      <h2 id="常用软件">常用软件
+      </h2>
+      <div class="category_pages">
+        <ul>  
+          <li class="pagelist item_arrow">
+              <a href="./常用软件/iTerm2.html">iTerm2</a>
+          </li>
+        </ul>
+      </div> <!-- end category_pages -->
+    </div> <!-- end category -->
     <div class="clearfix"></div>
 </div>
     </div>
@@ -180,7 +192,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-09-20 23:09:07</p>
+        <p>Site Generated 2018-10-23 10:25:18</p>
       </span>
     </div>
 
