Update output documentation

--- a/常用软件/iTerm2.html
+++ b/常用软件/iTerm2.html
@@ -45,18 +45,30 @@
 </pre></div>
 
 
-<h1 id="_3">快速选择文本</h1>
+<h1 id="_3">光标控制</h1>
+<div class="hlcode"><pre><span class="n">Cmd</span> <span class="o">+</span> <span class="k">return</span> <span class="err">全屏</span>
+<span class="n">Cmd</span> <span class="o">+</span> <span class="o">/</span> <span class="err">光标位置</span>
+<span class="n">Cmd</span> <span class="o">+</span> <span class="n">r</span> <span class="err">只是换到新一屏，不会像</span> <span class="n">clear</span> <span class="err">一样创建一个空屏</span>
+<span class="n">ctrl</span> <span class="o">+</span> <span class="n">u</span> <span class="err">清除当前行</span>
+<span class="n">ctrl</span> <span class="o">+</span> <span class="n">a</span> <span class="err">到行首</span>
+<span class="n">ctrl</span> <span class="o">+</span> <span class="n">e</span> <span class="err">到行尾</span>
+<span class="n">ctrl</span> <span class="o">+</span> <span class="n">w</span> <span class="err">删除光标之前的单词</span>
+<span class="n">ctrl</span> <span class="o">+</span> <span class="n">k</span> <span class="err">删除到文本末尾</span>
+</pre></div>
+
+
+<h1 id="_4">快速选择文本</h1>
 <p>Cmd + F, Tab</p>
-<h1 id="_4">粘贴板历史记录</h1>
+<h1 id="_5">粘贴板历史记录</h1>
 <p>Cmd + Shift + H</p>
-<h1 id="_5">操作快照</h1>
+<h1 id="_6">操作快照</h1>
 <p>Cmd + Option + B</p>
     </div>
     <div id="footer">
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-10-23 10:25:18</p>
+        <p>Site Generated 2018-10-23 10:30:10</p>
       </span>
     </div>
 
