Update output documentation

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
       <div class="category_pages">
         <ul>  
           <li class="pagelist item_arrow">
+              <a href="./常用软件/cmder.html">cmder</a>
+          </li>  
+          <li class="pagelist item_arrow">
               <a href="./常用软件/iTerm2.html">iTerm2</a>
           </li>
         </ul>
@@ -192,7 +195,7 @@
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-10-23 10:30:10</p>
+        <p>Site Generated 2018-10-24 15:23:11</p>
       </span>
     </div>
 
