Update output documentation

--- a/Git/常用命令笔记.html
+++ b/Git/常用命令笔记.html
@@ -34,6 +34,7 @@
 <li><a href="#_3">删除远程仓库上的文件</a></li>
 <li><a href="#tag">tag相关</a></li>
 <li><a href="#_4">删除远端分支</a></li>
+<li><a href="#_5">认证问题</a></li>
 </ul>
 </div>
 <h1 id="github">如何创建Github项目</h1>
@@ -140,12 +141,18 @@
 <div class="hlcode"><pre><span class="nx">git</span> <span class="nb">push</span> <span class="nx">origin</span> <span class="p">:</span><span class="nx">refs</span><span class="p">/</span><span class="nx">heads</span><span class="o">/&lt;</span><span class="nx">branchName</span><span class="o">&gt;</span>
 <span class="nx">git</span> <span class="nb">push</span> <span class="nx">origin</span> <span class="p">:</span><span class="nx">refs</span><span class="p">/</span><span class="nb">tags</span><span class="o">/&lt;</span><span class="nx">testName</span><span class="o">&gt;</span>
 </pre></div>
+
+
+<h1 id="_5">认证问题</h1>
+<p>拉代码遇到下列问题：</p>
+<p>remote: The project you were looking for could not be found.</p>
+<p>查看~/.git-credentials，是不是缓存用户无相应repo权限</p>
     </div>
     <div id="footer">
       <span>
         <p>Copyright © 2018 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-10-24 15:23:11</p>
+        <p>Site Generated 2018-10-24 17:45:46</p>
       </span>
     </div>
 
