Update output documentation

--- a/DesignPattern/Chain of Responsibility Pattern.html
+++ b/DesignPattern/Chain of Responsibility Pattern.html
@@ -92,12 +92,16 @@
 <span class="n">B</span> <span class="o">:</span> <span class="err">我觉得不行</span>
 <span class="n">C</span> <span class="o">:</span> <span class="err">阿岳真的很严格</span>
 </pre></div>
+
+
+<hr />
+<p>注：责任链可以是如上链状相连，也可以在第三方集中顺序执行</p>
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2018 lilpilot.
+        <p>Copyright © 2019 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-10-24 17:45:46</p>
+        <p>Site Generated 2019-05-09 16:07:35</p>
       </span>
     </div>
 
