--- a/MySQL/常用操作.html
+++ b/MySQL/常用操作.html
@@ -36,13 +36,15 @@
 <span class="n">select</span> <span class="o">*</span> <span class="n">from</span> <span class="n">information_schema</span><span class="p">.</span><span class="n">innodb_locks</span>
 
 <span class="n">select</span> <span class="o">*</span> <span class="n">from</span> <span class="n">information_schema</span><span class="p">.</span><span class="n">innodb_lock_waits</span>
+
+<span class="n">show</span> <span class="n">full</span> <span class="n">processlist</span><span class="p">;</span>
 </pre></div>
     </div>
     <div id="footer">
       <span>
-        <p>Copyright © 2018 lilpilot.
+        <p>Copyright © 2019 lilpilot.
         Powered by <a href="http://simiki.org/" target="_blank">Simiki</a>.</p>
-        <p>Site Generated 2018-10-24 17:45:46</p>
+        <p>Site Generated 2019-05-09 16:07:35</p>
       </span>
     </div>
 
